Ran test for dataset v0

--- a/NN_QST_1_KICS.ipynb
+++ b/NN_QST_1_KICS.ipynb
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "1e10cb9f",
+   "id": "6a7bf204",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "78c487de",
+   "id": "e27ff179",
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 570,
-   "id": "0b14d80e",
+   "id": "686c9209",
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 794,
    "id": "c806fb02",
    "metadata": {},
    "outputs": [],
@@ -311,13 +311,13 @@
     "#200 DMs for pure and mixed each\n",
     "#perform 200 noisy meaurements on each with var=pi/6\n",
     "\n",
-    "M_dataset = var_4_I #1000x64\n",
-    "M_label = var_4_L #1000x64"
+    "M_dataset = var_0_I #1000x64\n",
+    "M_label = var_0_L #1000x64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 795,
    "id": "38c65ccf",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 796,
    "id": "0d068a70",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 797,
    "id": "38a00342",
    "metadata": {},
    "outputs": [],
@@ -2956,7 +2956,7 @@
   {
    "cell_type": "code",
    "execution_count": 781,
-   "id": "c22a9260",
+   "id": "b3fc413d",
    "metadata": {
     "scrolled": true
    },
@@ -3032,7 +3032,7 @@
   {
    "cell_type": "code",
    "execution_count": 787,
-   "id": "0e6589c8",
+   "id": "044b2e1f",
    "metadata": {
     "scrolled": true
    },
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 793,
-   "id": "1e1e647a",
+   "id": "87228f00",
    "metadata": {
     "scrolled": true
    },
@@ -3182,36 +3182,106 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "792177ab",
+   "cell_type": "code",
+   "execution_count": 798,
+   "id": "528a6fe8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss per Batch: 0.011168\n",
+      "Loss per Batch: 0.011683\n",
+      "Loss per Batch: 0.011419\n",
+      "Loss per Batch: 0.011394\n",
+      "Loss per Batch: 0.010965\n",
+      "Loss per Batch: 0.010842\n",
+      "Loss per Batch: 0.011105\n",
+      "Loss per Batch: 0.011069\n",
+      "Loss per Batch: 0.011301\n",
+      "Loss per Batch: 0.010599\n",
+      "Loss per Batch: 0.011074\n",
+      "Loss per Batch: 0.011716\n",
+      "Loss per Batch: 0.010902\n",
+      "Loss per Batch: 0.010554\n",
+      "Loss per Batch: 0.010256\n",
+      "Loss per Batch: 0.010956\n",
+      "Loss per Batch: 0.011623\n",
+      "Loss per Batch: 0.010758\n",
+      "Loss per Batch: 0.010478\n",
+      "Loss per Batch: 0.011403\n",
+      "Final Test Loss: 0.011063\n",
+      "Average Fidelity: 0.885972\n"
+     ]
+    }
+   ],
    "source": [
-    "###Trained on v1 for 2000 epochs\n",
+    "# track test loss on v0\n",
+    "test_loss = 0.0\n",
+    "fidelity = 0.0\n",
+    "if train_on_gpu:\n",
+    "    model.cuda()\n",
+    "model.eval()\n",
+    "for data, target in test_loader:\n",
+    "    # move tensors to GPU if CUDA is available\n",
+    "    if train_on_gpu:\n",
+    "        with torch.no_grad():\n",
+    "            data, target = data.cuda(), target.cuda()\n",
+    "            # forward pass: compute predicted outputs by passing inputs to the model\n",
+    "            output = model(data)\n",
+    "            \n",
+    "            for ij in range(batch_size):\n",
+    "                aa = np.array(output.cpu().numpy()[ij])\n",
+    "                bb = np.array(target.cpu().numpy()[ij])\n",
+    "                rho1 = state_recon_bloch_vec(pauli, aa)\n",
+    "                rho2 = state_recon_bloch_vec(pauli, bb)\n",
+    "                rho1 = eig_val_corr(rho1)\n",
+    "                rho2 = eig_val_corr(rho2)\n",
+    "                fidelity += qt.fidelity(qt.Qobj(rho1), qt.Qobj(rho2))\n",
+    "                \n",
+    "            # calculate the batch loss\n",
+    "            loss = criterion(output, target)\n",
+    "            # update average validation loss \n",
+    "            test_loss += loss.item()*data.size(0)\n",
+    "    print('Loss per Batch: {:.6f}'.format(loss))\n",
+    "    \n",
+    "# calculate average losses\n",
+    "test_loss = test_loss/len(test_loader.sampler)\n",
+    "fidelity = fidelity/len(test_loader.sampler)\n",
     "\n",
-    "#v1\n",
-    "Final Test Loss: 0.014150\n",
-    "Average Fidelity: 0.861356\n",
-    "    \n",
-    "#v2\n",
-    "Final Test Loss: 0.015468\n",
-    "Average Fidelity: 0.851827\n",
-    "    \n",
-    "#v3\n",
-    "Final Test Loss: 0.015986\n",
-    "Average Fidelity: 0.847331\n",
-    "    \n",
-    "#v4\n",
-    "Final Test Loss: 0.016294\n",
-    "Average Fidelity: 0.845162"
+    "# print training/validation statistics \n",
+    "print('Final Test Loss: {:.6f}'.format(test_loss))\n",
+    "print('Average Fidelity: {:.6f}'.format(fidelity))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a46e25e0",
+   "cell_type": "markdown",
+   "id": "eae66c9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Trained on v1 for 2000 epochs\n",
+    "\n",
+    "#v0    \n",
+    "Final Test Loss: 0.011063    \n",
+    "Average Fidelity: 0.885972\n",
+    "\n",
+    "#v1   \n",
+    "Final Test Loss: 0.014150   \n",
+    "Average Fidelity: 0.861356\n",
+    "    \n",
+    "#v2   \n",
+    "Final Test Loss: 0.015468   \n",
+    "Average Fidelity: 0.851827\n",
+    "    \n",
+    "#v3   \n",
+    "Final Test Loss: 0.015986   \n",
+    "Average Fidelity: 0.847331\n",
+    "    \n",
+    "#v4   \n",
+    "Final Test Loss: 0.016294  \n",
+    "Average Fidelity: 0.845162"
+   ]
   }
  ],
  "metadata": {
