--- a/NN_QST_1_KICS.ipynb
+++ b/NN_QST_1_KICS.ipynb
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "6a7bf204",
+   "id": "d8d43951",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "e27ff179",
+   "id": "ab76815e",
    "metadata": {
     "scrolled": true
    },
@@ -221,17 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
-   "id": "686c9209",
+   "execution_count": 799,
+   "id": "555d2c51",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9999999999999971 0.8133257710769483 0.7470423130329151 0.7132102512398958 0.698046986930631\n"
+     "ename": "NameError",
+     "evalue": "name 'b_f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-799-fbc8a0073e08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[0me_m\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmse_avg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar_4_I\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvar_4_L\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_f\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb_f\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc_f\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md_f\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0me_f\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_m\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb_m\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc_m\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md_m\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0me_m\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'b_f' is not defined"
      ]
     }
    ],
@@ -250,7 +254,25 @@
     "                state_act += var_0_L_a[i, j, k]*optrs\n",
     "    \n",
     "    return state_act/8\n",
-    "                \n",
+    "\n",
+    "def mse(x1, y1):\n",
+    "    \n",
+    "    MSE = np.square(np.subtract(x1,y1)).mean()\n",
+    "    return MSE\n",
+    "\n",
+    "def mse_avg(X, Y):\n",
+    "    \n",
+    "    x_len = X.shape[0]\n",
+    "    y_len = Y.shape[0]\n",
+    "    \n",
+    "    avg_mse = 0.0\n",
+    "    \n",
+    "    if x_len == y_len:\n",
+    "        for ii in range(x_len):\n",
+    "            avg_mse += mse(X[ii], Y[ii])\n",
+    "    \n",
+    "    return avg_mse/x_len\n",
+    "\n",
     "state_act = state_recon_bloch_vec(pauli, var_4_L[2])\n",
     "state_est = state_recon_bloch_vec(pauli, var_4_I[2])\n",
     "            \n",
@@ -265,13 +287,42 @@
     "        fidelity += qt.fidelity(qt.Qobj(a), qt.Qobj(b))\n",
     "    return fidelity/l\n",
     "\n",
-    "a = fid_avg(pauli, var_0_I, var_0_L, data_pts)\n",
-    "b = fid_avg(pauli, var_1_I, var_1_L, data_pts)\n",
-    "c = fid_avg(pauli, var_2_I, var_2_L, data_pts)\n",
-    "d = fid_avg(pauli, var_3_I, var_3_L, data_pts)\n",
-    "e = fid_avg(pauli, var_4_I, var_4_L, data_pts)\n",
+    "a_f = fid_avg(pauli, var_0_I, var_0_L, data_pts)\n",
+    "a_m = mse_avg(var_0_I, var_0_L)\n",
     "\n",
-    "print(a, b, c, d, e)"
+    "b_f = fid_avg(pauli, var_1_I, var_1_L, data_pts)\n",
+    "b_m = mse_avg(var_1_I, var_1_L)\n",
+    "c_f = fid_avg(pauli, var_2_I, var_2_L, data_pts)\n",
+    "c_m = mse_avg(var_2_I, var_2_L)\n",
+    "\n",
+    "d_f = fid_avg(pauli, var_3_I, var_3_L, data_pts)\n",
+    "d_m = mse_avg(var_3_I, var_3_L)\n",
+    "\n",
+    "e_f = fid_avg(pauli, var_4_I, var_4_L, data_pts)\n",
+    "e_m = mse_avg(var_4_I, var_4_L)\n",
+    "\n",
+    "print(a_f, b_f, c_f, d_f, e_f)\n",
+    "print(a_m, b_m, c_m, d_m, e_m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 801,
+   "id": "fa0a3297",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999999999999971 0.8133257710769483 0.7470423130329151 0.7132102512398958 0.698046986930631\n",
+      "0.0 0.024656216964284595 0.03492372287137137 0.039490217026342006 0.04160782539309789\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a_f, b, c, d, e)\n",
+    "print(a_m/10000, b_m/10000, c_m/10000, d_m/10000, e_m/10000)"
    ]
   },
   {
@@ -2956,7 +3007,7 @@
   {
    "cell_type": "code",
    "execution_count": 781,
-   "id": "b3fc413d",
+   "id": "6a6551cf",
    "metadata": {
     "scrolled": true
    },
@@ -3032,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": 787,
-   "id": "044b2e1f",
+   "id": "2caded03",
    "metadata": {
     "scrolled": true
    },
@@ -3108,7 +3159,7 @@
   {
    "cell_type": "code",
    "execution_count": 793,
-   "id": "87228f00",
+   "id": "5ec96944",
    "metadata": {
     "scrolled": true
    },
@@ -3184,7 +3235,7 @@
   {
    "cell_type": "code",
    "execution_count": 798,
-   "id": "528a6fe8",
+   "id": "f52b2478",
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae66c9c",
+   "id": "ca2b45bb",
    "metadata": {},
    "source": [
     "Trained on v1 for 2000 epochs\n",
